# NakamuraAlignmentTool

./: Align.h  AlignmentAlgorithms.h  CMakeLists.txt  main.cpp
AlignmentTool/: BasicCalculation_v170122.hpp  ErrorDetection_v190702.cpp  Fmt3xToHmm_v170225.cpp  MatchToCorresp_v170918.cpp  MusicXMLToFmt3x_v170104.cpp  MusicXMLToHMM_v170104.cpp  MusicXMLToHMM_v170104.h  RealignmentMOHMM_v170427.cpp  ScorePerfmMatcher_v170101_2.cpp  SprToFmt3x_v170225.cpp  midi2pianoroll_v170504.cpp  midi2pianoroll_v170504.h
