cmake_minimum_required(VERSION 3.25)
project(NakamuraAlignmentTool)

set(CMAKE_CXX_STANDARD 17)

add_executable(NakamuraAlignmentTool main.cpp AlignmentTool/midi2pianoroll_v170504.cpp AlignmentTool/MusicXMLToHMM_v170104.cpp AlignmentTool/MusicXMLToFmt3x_v170104.cpp AlignmentTool/ScorePerfmMatcher_v170101_2.cpp AlignmentTool/ErrorDetection_v190702.cpp)
